--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 .grid-container {
 	display: grid;
 	grid-template-columns: repeat(16, 1fr);
+	justify-content: space-around;
+	align-content: center;
 }
 
-div .grid-items {
-	background-color: blue;
-	border: red solid 2px;
+.grid-item {
+	color: blue;
 }
