--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 .grid-container {
 	display: grid;
 	border: black 2px solid;
-	max-width: 960px;
-	max-height: 960px;
+	width: 690px;
+	height: 690px;
 }
 
 .grid-item {
 	color: blue;
+	width: 10px;
+	height: 10px;
 }
