--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
+#header {
+	background-color: #1f2937;
+	color: white;
+	font-weight: bold;
+	justify-content: center;
+	display: flex;
+}
+
+#content {
+	display: flex;
+}
+
 .grid-container {
 	display: grid;
 	border: black 2px solid;
 	width: 690px;
 	height: 690px;
+	align-self: center;
 }
 
 .grid-item {
